@@ -1,8 +1,8 @@
 Gem::Specification.new do |s|
   s.name = "metric_fu" 
-  s.version = "1.1.6"
+  s.version = "1.2.0"
   s.summary = "A fistful of code metrics, with awesome templates and graphs"
-  s.email = "carl@youngbloods.org"
+  s.email = "jake.scruggs@gmail.com"
   s.homepage = "http://metric-fu.rubyforge.org/"
   s.description = "Code metrics from Flog, Flay, RCov, Saikuro, Churn, Reek, Roodi and Rails' stats task"
   s.authors = ["Jake Scruggs", "Sean Soper", "Andre Arko", "Petrik de Heus", "Grant McInnes", "Nick Quaranto", "Édouard Brière", "Carl Youngblood"]
@@ -26,6 +26,6 @@ Gem::Specification.new do |s|
 
   s.add_dependency("flay", [">= 1.2.1"])
   s.add_dependency("flog", ["= 2.2.0"])
-  s.add_dependency("relevance-rcov", [">= 0.8.3.3"])
-  s.add_dependency("mojombo-chronic", [">= 0.3.0"])
+  s.add_dependency("rcov", [">= 0.8.3.3"])
+  s.add_dependency("chronic", [">= 0.2.3"])
 end
