@@ -1,3 +1,9 @@
+=== MetricFu 1.2.0 / 2010-01-09
+
+* ftools isn't supported by 1.9 so moved to fileutils.
+* Added support for Google Charts thanks to Carl Youngblood.
+* Stopped relying on Github gems as they will be going away.
+
 === MetricFu 1.1.6 / 2009-12-14
 
 * Now compatible with Reek 1.2x thanks to Kevin Rutherford
